--- a/HeroesOfPymoli-checkpoint.ipynb
+++ b/HeroesOfPymoli-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "file = \"02-Homework_04-Pandas_Instructions_HeroesOfPymoli_Resources_purchase_data.csv\"\n",
     "\n",
@@ -33,27 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Lisosia93        5\n",
-       "Idastidru52      4\n",
-       "Iral74           4\n",
-       "Tyisur83         3\n",
-       "Rarallo90        3\n",
-       "                ..\n",
-       "Aeralria27       1\n",
-       "Mindjasksya61    1\n",
-       "Ethrasyon38      1\n",
-       "Chamastya76      1\n",
-       "Isursti83        1\n",
+       "Lisosia93       5\n",
+       "Iral74          4\n",
+       "Idastidru52     4\n",
+       "Aina42          3\n",
+       "Pheodaisun84    3\n",
+       "               ..\n",
+       "Lisilsa62       1\n",
+       "Tyirinu79       1\n",
+       "Tyialisti80     1\n",
+       "Iskim96         1\n",
+       "Assirra56       1\n",
        "Name: SN, Length: 576, dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +212,7 @@
        "0            576"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +247,7 @@
        "Name: Item ID, Length: 179, dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +268,7 @@
        "3.050987179487176"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +300,7 @@
        "Name: Purchase ID, Length: 780, dtype: int64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +321,7 @@
        "2379.77"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +380,7 @@
        "0                     179           3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +512,7 @@
        "[576 rows x 2 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +541,7 @@
        "Name: Gender, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +604,7 @@
        "Other / Non-Disclosed      11"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +673,7 @@
        "Other / Non-Disclosed      11      1.91%"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +763,7 @@
        "4            4   Male   1.44"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +788,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,72 +800,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Purchase Count\n",
-       "Gender                               \n",
-       "Male                              652\n",
-       "Female                            113\n",
-       "Other / Non-Disclosed              15"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +874,7 @@
        "4   Male   1.44"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +942,7 @@
        "Other / Non-Disclosed  3.346000"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1013,7 @@
        "Other / Non-Disclosed    50.19"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1084,7 @@
        "Other / Non-Disclosed              15"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1090,22 +1138,22 @@
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>3.02</td>\n",
-       "      <td>$1967.64</td>\n",
-       "      <td>$4.07</td>\n",
+       "      <td>1967.64</td>\n",
+       "      <td>4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
        "      <td>3.20</td>\n",
-       "      <td>$361.94</td>\n",
-       "      <td>$4.47</td>\n",
+       "      <td>361.94</td>\n",
+       "      <td>4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
        "      <td>3.35</td>\n",
-       "      <td>$50.19</td>\n",
-       "      <td>$4.56</td>\n",
+       "      <td>50.19</td>\n",
+       "      <td>4.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1118,14 +1166,14 @@
        "Female                            113                    3.20   \n",
        "Other / Non-Disclosed              15                    3.35   \n",
        "\n",
-       "                      Total Purchase Value Avg Total Purchase Per Person  \n",
-       "Gender                                                                    \n",
-       "Male                              $1967.64                         $4.07  \n",
-       "Female                             $361.94                         $4.47  \n",
-       "Other / Non-Disclosed               $50.19                         $4.56  "
+       "                       Total Purchase Value  Avg Total Purchase Per Person  \n",
+       "Gender                                                                      \n",
+       "Male                                1967.64                           4.07  \n",
+       "Female                               361.94                           4.47  \n",
+       "Other / Non-Disclosed                 50.19                           4.56  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,8 +1185,6 @@
     "\n",
     "gender_analysis_df['Average Purchase Price'] = pd.Series([round(val, 2) for val in gender_analysis_df['Average Purchase Price']], index = gender_analysis_df.index)\n",
     "gender_analysis_df['Avg Total Purchase Per Person'] = pd.Series([round(val, 2) for val in gender_analysis_df['Avg Total Purchase Per Person']], index = gender_analysis_df.index)\n",
-    "gender_analysis_df['Total Purchase Value'] = gender_analysis_df['Total Purchase Value'].apply(lambda x: \"${:.2f}\".format((x/1)))\n",
-    "gender_analysis_df['Avg Total Purchase Per Person'] = gender_analysis_df['Avg Total Purchase Per Person'].apply(lambda x: \"${:.2f}\".format((x/1)))\n",
     "\n",
     "gender_analysis_df"
    ]
